--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "supergrid9k-server",
+  "name": "@lerna-monorepo/server",
+  "private": true,
   "version": "0.0.0",
   "scripts": {
     "start": "cross-env NODE_ENV=production ts-node --transpile-only src/server.ts",
@@ -11,6 +12,7 @@
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
@@ -23,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
+    "rollup": "^2.26.5",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4",
     "ts-jest": "^26.2.0",
@@ -45,12 +48,17 @@
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
+    "@wessberg/rollup-plugin-ts": "^1.3.2",
     "eslint": "^7.7.0",
     "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
     "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
+    "prettier-eslint": "^11.0.0",
     "supertest": "^4.0.2",
-    "tslint": "^6.1.3",
     "tslint-config-airbnb": "^5.11.2"
   }
 }
