--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4",
     "ts-jest": "^26.2.0",
+    "ts-mongoose": "^0.0.21",
     "ts-node": "^8.10.2",
     "typescript": "^4.0.2"
   },
@@ -46,6 +47,7 @@
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.0",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "@wessberg/rollup-plugin-ts": "^1.3.2",
@@ -58,7 +60,6 @@
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "prettier-eslint": "^11.0.0",
-    "supertest": "^4.0.2",
-    "tslint-config-airbnb": "^5.11.2"
+    "supertest": "^4.0.2"
   }
 }
