--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "node",
     "typeRoots": ["./node_modules/@types"],
     "baseUrl": "./src",
+    "resolveJsonModule": true,
     "paths": {
       "@lerna-monorepo/client": ["../client"]
     }
